Sun Jul 01 15:32:30 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Clearer description of
	  NumberValueRangeProcessor.  Don't document the number format in
	  terms of strtod() - that's a bug, not a feature we want to be tied
	  to.
	* include/xapian/query.h,include/xapian/queryparser.h: Use "@a" not
	  "\a" for consistency with existing usage.

Sun Jul 01 10:09:42 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* matcher/localmatch.cc: When registering a term, check if it's
	  empty, and if so use the document count as the term frequency,
	  rather than calling the database to get the term frequency of an
	  empty term (most database backends have an assertion that the
	  term is not empty, and an empty term isn't a valid parameter to
	  pass to get_termfreq() anyway).
	* matcher/multimatch.cc: For MatchAll queries, the "" term will not
	  be found in the termlist of the top document, so check if a ""
	  term is present in the query, and use it to increase the
	  percent_scale if so.  This fixes an Assertion which checked that
	  percent_scale was not 0.
	* tests/api_db.cc: Add test_matchall1() which tests running a query
	  with a MatchAll query.
	* tests/api_nodb.cc: Rename test_emptyquery1 and test_emptyquery2
	  to test_emptyquery2 and test_emptyquery3, respectively.  There
	  was already a (different) test_emptyquery1 in api_anydb.cc.

Sat Jun 30 18:04:06 BST 2007  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Write `2.0' rather than `(double)2'.

Sat Jun 30 16:12:49 BST 2007  Olly Betts <olly@survex.com>

	* docs/valueranges.rst: Fix typo.  Fix ".. note:" to ".. note::" so
	  it appears visibly in the HTML output rather than in an HTML
	  comment!

Sat Jun 30 15:14:33 BST 2007  Olly Betts <olly@survex.com>

	* api/omdocument.cc,common/document.h,include/xapian/document.h:
	  Add Xapian::Document::get_docid() method.

Sat Jun 30 04:00:57 BST 2007  Olly Betts <olly@survex.com>
