@@ -150,6 +150,16 @@ class XAPIAN_VISIBILITY_DEFAULT DateValueRangeProcessor : public ValueRangeProce
     Xapian::valueno operator()(std::string &begin, std::string &end);
 };
 
+// Xapian 1.0.0 and 1.0.1 had a conceptually broken implementation of
+// NumberValueRangeProcessor which we quickly told people to avoid using.  But to keep
+// ABI compatibility, we should keep it around until the next incompatible ABI change
+// (probably 1.1.0).  So we put the new NumberValueRangeProcessor in a subnamespace and
+// then pull it into this one with "using v102::NumberValueRangeProcessor".  The old
+// NumberValueRangeProcessor still exists with default visibility, but isn't
+// declared in an external or internal header, so will only be used when dynamically
+// linking with application code built against Xapian 1.0.0 or 1.0.1.
+namespace v102 {
+
 /** Handle a number range.
  *
  *  This class must be used on values which have been encoded with its
@@ -248,8 +258,13 @@ class XAPIAN_VISIBILITY_DEFAULT NumberValueRangeProcessor : public ValueRangePro
      *  may be a different (nearby) value on other platforms.
      */
     static double string_to_float(const std::string & value);
-
 };
+
+}
+
+#ifndef XAPIAN_NO_V102_NUMBER_VRP
+using v102::NumberValueRangeProcessor;
+#endif
 
 /// Build a Xapian::Query object from a user query string.
 class XAPIAN_VISIBILITY_DEFAULT QueryParser {
